--- a/package.json
+++ b/package.json
@@ -7,9 +7,20 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
+  "reactSnap": {
+    "source": "dist",
+    "minifyHtml": {
+      "collapseWhitespace": false,
+      "removeComments": false
+    }
+  },
   "dependencies": {
     "core-js": "^3.6.4",
-    "vue": "^2.6.11"
+    "node-sass": "^4.14.0",
+    "react-snap": "^1.23.0",
+    "sass-loader": "^8.0.2",
+    "vue": "^2.6.11",
+    "vue-router": "^3.1.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.3.0",
