--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,9 @@
+[build]
+  command = "yarn build"
+  publish = "dist"
+
 [[plugins]]
 # package = "../netlify-plugin-prerender"
-package = "../netlify-plugin-prerender"
+package = "../netlify-plugin-prerender-spa"
   [plugins.inputs]
-  source = "hel"
+  source = "dist"
