--- a/netlify.toml
+++ b/netlify.toml
@@ -4,6 +4,6 @@
 
 [[plugins]]
 # package = "../netlify-plugin-prerender"
-package = "../netlify-plugin-prerender-spa"
+package = "./netlify-plugin-prerender-spa"
   [plugins.inputs]
   source = "dist"
