--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
+    "netlify-plugin-prerender-spa": "^1.0.0",
     "node-sass": "^4.14.0",
     "react-snap": "^1.23.0",
     "sass-loader": "^8.0.2",
